--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@fontsource/roboto": "^4.5.1",
     "@mui/icons-material": "^5.0.4",
     "@mui/material": "^5.0.4",
+    "clsx": "^1.1.1",
     "firebase": "^9.1.3",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-image-lightbox": "^5.1.4",
     "react-jss": "^10.8.0",
     "react-router-dom": "^5.3.0",
     "sass": "^1.43.2"
